erDiagram
    T_DESTINATION_CITY {
        BIGINT id PK "主键ID"
        VARCHAR name "城市名"
        VARCHAR province "省份"
        DECIMAL center_lat "中心纬度"
        DECIMAL center_lng "中心经度"
    }

    T_SPOT {
        BIGINT id PK "景点ID"
        BIGINT city_id FK "所属城市"
        BIGINT category_id FK "分类ID"
        VARCHAR name "景点名称"
        DECIMAL lat "纬度"
        DECIMAL lng "经度"
    }

    T_SPOT_IMAGE {
        BIGINT id PK "图片ID"
        BIGINT spot_id FK "所属景点"
        VARCHAR url "图片URL"
    }

    T_SPOT_CATEGORY {
        BIGINT id PK "分类ID"
        VARCHAR name "分类名"
    }

    T_SPOT_TAG {
        BIGINT id PK "标签ID"
        VARCHAR name "标签名"
    }

    T_SPOT_TAG_MAP {
        BIGINT spot_id "景点ID"
        BIGINT tag_id "标签ID"
    }

    SYS_USER {
        BIGINT user_id PK "用户ID"
        VARCHAR username "用户名"
    }

    SYS_ROLE {
        BIGINT role_id PK "角色ID"
        VARCHAR role_code "角色编码"
    }

    SYS_MENU {
        BIGINT menu_id PK "菜单ID"
        VARCHAR permission "权限标识"
    }

    SYS_ROLE_MENU {
        BIGINT role_id "角色ID"
        BIGINT menu_id "菜单ID"
    }

    SYS_USER_ROLE {
        BIGINT user_id "用户ID"
        BIGINT role_id "角色ID"
    }

    T_DESTINATION_CITY ||--o{ T_SPOT : "has"
    T_SPOT ||--o{ T_SPOT_IMAGE : "has"
    T_SPOT }o--|| T_SPOT_CATEGORY : "belongs_to"
    T_SPOT }o--o{ T_SPOT_TAG : "tagged_via"
    SYS_ROLE ||--o{ SYS_ROLE_MENU : "has"
    SYS_MENU ||--o{ SYS_ROLE_MENU : "belongs_to"
    SYS_USER ||--o{ SYS_USER_ROLE : "has"
    SYS_ROLE ||--o{ SYS_USER_ROLE : "assigned_to"
